# easyorario

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  justfile  pyproject.toml
.claude/: settings.json
_bmad-output/implementation-artifacts/: 1-1-project-skeleton-development-infrastructure.md  1-2-user-registration.md  1-3-user-login-session-management.md  1-4-dashboard-role-based-access-control.md  2-1-create-new-timetable.md  2-2-constraint-input-in-natural-language.md  3-1-llm-endpoint-configuration.md  3-2-constraint-translation-via-llm.md  3-3-constraint-verification-approval.md  3-4-pre-solve-constraint-conflict-detection.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-02-16.md  sprint-change-proposal-2026-02-18.md  ux-design-specification.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
alembic/: env.py
alembic/versions/: 1e0a494256e0_create_constraints_table.py  5b6c47c2c59b_create_users_table.py  74998b4f2abc_create_timetables_table.py
docs/: PRD.md
easyorario/: __init__.py  app.py  config.py  exceptions.py
easyorario/controllers/: auth.py  constraint.py  dashboard.py  health.py  home.py  settings.py  timetable.py
easyorario/guards/: __init__.py  auth.py
easyorario/i18n/: errors.py
easyorario/models/: __init__.py  base.py  constraint.py  timetable.py  user.py
templates/: base.html
tests/: conftest.py
(+40 files in other folders)
